--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </section>
         <section class="data-section">
             <div class="container d-flex flex-column data-container">
-                <h6>Copy and paste playerlist here:</h6>
+                <h6>Copy and paste playerlist here, then click the Process button below.  Default list with correct format is available <a href="https://docs.google.com/spreadsheets/d/1nyOUvOB9FkTIEcM60Ow5nU8sLa1l_-iYKF2if_ZVV3o/edit?usp=sharing" target="_blank">here</a>.</h6>
 
                 <textarea name="raw-data" id="raw-data" cols="30" rows="10"></textarea>
 
@@ -64,6 +64,8 @@
                     <button class="btn btn-primary data-btn data-clear">Clear</button><span>
                 </div>
                 <p class="message mt-2 font-italic"></p>
+
+                <h6>To save a copy of your playerlist into your browser's cache click the Save button after pasting it in the box above.  Next time you visit this page from that devise you can click Load and it will load your list.  Click Clear to clear the draft sheet and your browser's cache.</h6>
 
             </div>
 
