--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#39b74c" >
+    <meta name="theme-color" content="#39b74c">
 
     <title>Unofficial LXG Draft Sheet</title>
 
     <link rel="shortcut icon" type="image/x-icon" href="favicon120.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -35,25 +40,28 @@
             <h6 class="add-notice">Add players to the data tab to begin</h6>
             <div class="sheet-body">
                 <div class="qb-section pos-section">
-                    <h6>QB</h6>
+                    <p>QB</p>
                 </div>
                 <div class="rb-section pos-section">
-                    <h6>RB</h6>
+                    <p>RB</p>
                 </div>
                 <div class="wr-section pos-section">
-                    <h6>WR</h6>
+                    <p>WR</p>
                 </div>
                 <div class="te-section pos-section">
-                    <h6>TE</h6>
+                    <p>TE</p>
                 </div>
                 <div class="dst-section pos-section">
-                    <h6>DST</h6>
+                    <p>DST</p>
                 </div>
             </div>
         </section>
         <section class="data-section">
             <div class="container d-flex flex-column data-container">
-                <h6>Copy and paste your player list here, then click the <strong>Process</strong> button below.  A default list with correct format is available <a href="https://docs.google.com/spreadsheets/d/1nyOUvOB9FkTIEcM60Ow5nU8sLa1l_-iYKF2if_ZVV3o/edit?usp=sharing" target="_blank"><strong>here</strong></a>.</h6>
+                <h6>Copy and paste your player list here, then click the <strong>Process</strong> button below. A
+                    default list with correct format is available <a
+                        href="https://docs.google.com/spreadsheets/d/1nyOUvOB9FkTIEcM60Ow5nU8sLa1l_-iYKF2if_ZVV3o/edit?usp=sharing"
+                        target="_blank"><strong>here</strong></a>.</h6>
 
                 <textarea name="raw-data" id="raw-data" cols="30" rows="10"></textarea>
 
@@ -65,7 +73,11 @@
                 </div>
                 <p class="message mt-2 font-italic"></p>
 
-                <h6>To save a copy of your player list into your browser's storage click the <strong>Save</strong> button after pasting it in the box above.  This is only available on the device you are using at the time.  The next time you visit this page from that devise you can click <strong>Load</strong> and it will load your list.  Click <strong>Clear</strong> to clear the draft sheet and your browser's storage.</h6>
+                <h6>To save a copy of your player list into your browser's storage click the <strong>Save</strong>
+                    button after pasting it in the box above. This is only available on the device you are using at the
+                    time. The next time you visit this page from that devise you can click <strong>Load</strong> and it
+                    will load your list. Click <strong>Clear</strong> to clear the draft sheet and your browser's
+                    storage.</h6>
 
             </div>
 
