--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#39b74c">
 
-    <title>Unofficial LXG Draft Sheet</title>
+    <title>Fantasy Draft Sheet</title>
 
     <link rel="shortcut icon" type="image/x-icon" href="favicon120.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
